--- a/projetinho/style.css
+++ b/projetinho/style.css
@@ -1,6 +1,9 @@
 :root{
     --gray-700: #0D0D0D;
     --gray-600:#1A1A1A;
+    --blue-dark:#1E6F9F;
+    --gray-100: #F2F2F2; 
+    --gray-500: #262626;
 }
 
 *{
@@ -10,28 +13,24 @@
     font-family: Inter;
 }
 
-
 header{
     display: flex;
     justify-content: center;
     align-items:center ;
     background-color: var(--gray-700);
-    width: 1440px;
+    width: 100%;
+    padding: 20px;
     height: 200px;
 }
 #container{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     background-color:var(--gray-600);
     width: 100vw;
     height: 100vh;
 }
 
-p{
-    color: white;
-    background-color:var(--gray-700);
-    
-}
 img{
     width: 126px;
     height: 48px;
@@ -42,3 +41,42 @@ img{
     background-color: var(--gray-700);
 }
 
+button{
+    display: flex;
+    background-color: var(--blue-dark) ;
+    color: var(--gray-100);
+    padding: 10px 20px ;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+p{
+    color:var(--blue-dark);
+    background-color: var(--blue-dark);
+}
+
+input[type="text"] {
+    width: 500px;
+    padding: 10px;
+    background-color: var(--gray-500);
+    border: 2px solid var(--gray-700);
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+label {
+    position: absolute;
+    top: 50%;
+    height: 54px;
+    left: 10px;
+    background-color: var(--gray-700);
+    padding: 0 5px;
+}
+
+.input-container{
+    display: flex;
+    padding: 0px  5px 5px 5px;
+    
+}
