--- a/projetinho/style.css
+++ b/projetinho/style.css
@@ -4,6 +4,11 @@
     --blue-dark:#1E6F9F;
     --gray-100: #F2F2F2; 
     --gray-500: #262626;
+    --blue:#4EA8DE;
+    --gray-300:#808080;
+    --gray-400:#333333;
+    --gray-200:#D9D9D9;
+    --purple:#8284FA;
 }
 
 *{
@@ -29,6 +34,10 @@ header{
     background-color:var(--gray-600);
     width: 100vw;
     height: 100vh;
+}
+#button-p{
+    background-color: var(--gray-600);
+    color: var(--gray-600);
 }
 
 img{
@@ -66,17 +75,57 @@ input[type="text"] {
     font-size: 16px;
 }
 
-label {
-    position: absolute;
-    top: 50%;
-    height: 54px;
-    left: 10px;
-    background-color: var(--gray-700);
-    padding: 0 5px;
-}
-
 .input-container{
     display: flex;
-    padding: 0px  5px 5px 5px;
+    align-items: center;
+    position: relative;
+    margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 5px;
     
+}
+.campo2 {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#linha{
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+#linhona {
+    display: flex;
+    gap: 10px;
+}
+
+h3{
+    color: var(--blue) ;
+}
+
+span{
+    width: Hug (25px)px;
+    height: Hug (19px)px;
+    padding: 2px 8px 2px 8px;
+    gap: 10px;
+    border-radius: 999px 0px 0px 0px;
+    background-color: var(--gray-400);
+    border-radius: 1500px;
+    color:var(--gray-200)
+    
+}
+#criadas{
+    color: var(--blue);
+}
+#concluidas{
+    color: var(--purple);
+}
+
+h2,h4{
+    color:var(--gray-300);
 }
