--- a/projetinho/style-pronto.css
+++ b/projetinho/style-pronto.css
@@ -115,7 +115,7 @@ span{
     padding: 2px 8px 2px 8px;
     gap: 10px;
     border-radius: 999px 0px 0px 0px;
-    background-color: var(--gray-400);
+    background-color: var(--gray-500);
     border-radius: 1500px;
     color:var(--gray-200);  
 }
@@ -134,8 +134,13 @@ span{
     align-items: center;
     width: 50%;
     height: 100px;
+    padding: 3px;
 }
 
 #button-lixeira{
     background-color: var(--gray-600);
+}
+
+li{
+    list-style: none;
 }
