--- a/projetinho/style-pronto.css
+++ b/projetinho/style-pronto.css
@@ -17,10 +17,12 @@
     margin: 0;
     font-family: Inter;
     line-height: 140%;
+    font-size: 15px;
 }
 
 header{
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items:center ;
     background-color: var(--gray-700);
@@ -120,12 +122,6 @@ span{
     color:var(--gray-200);  
 }
 
-#tarefas{
-    border: 2px solid var(--gray-400);
-    background-color: var(--gray-500);
-    color: var(--gray-100);
-}
-
 .tarefas{
     display: flex;
     flex-direction: row;
@@ -143,4 +139,10 @@ span{
 
 li{
     list-style: none;
+}
+
+
+.lista{
+    padding: 3px;
+    margin-bottom: 5px;
 }
