--- a/projetinho/style.css
+++ b/projetinho/style.css
@@ -88,6 +88,8 @@ input[type="text"] {
 #campo2 {
     width: 60%;
     height: 200px;
+    flex-direction: column;
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -138,4 +140,8 @@ h2,h4{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+li{
+    list-style: none;
 }
